# picosynth

./: .gitignore  .gitmodules  CMakeLists.txt  sine_wave.c
inc/: cfg.h  constants.h  kps.h
prototype/: kps.py  main.py
src/: cfg.c  kps.c  main.c
